<resources>
    <string name="app_name">PRM391x_Project3_HieudmFX09822</string>
    <string name="item_add_alarm">Add an alarm</string>
    <string name="title_sms">Make a pending SMS</string>
    <string name="title_call">Make a taking a Call</string>
    <string name="title_alarm">Make a setting a Alarm</string>
    <string name="hint_message">MESSAGE</string>
    <string name="hint_phone">PHONE</string>
    <string name="hint_enter_your_sms">Enter your message</string>
    <string name="hint_enter_phone_number">Enter the needed phone number</string>
    <string name="hint_enter_your_alarm">Make a notice here to alarm</string>
    <string name="hour">hours</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="pivot">:</string>
    <string name="send_to">Send to: </string>
    <string name="sms_content">Content: </string>
    <string name="time_delay">Time delay: </string>
    <string name="send_mess">Send</string>
    <string name="reset_mess">Reset</string>
    <string name="cancel_mess">Cancel</string>
    <string name="stop">Stop</string>
    <string name="finish">Done</string>
    <string name="remove">Remove</string>
    <string name="back_button">Back</string>
    <string name="created_by">CREATED BY: ĐỖ MẠNH HIẾU</string>
    <string name="call_to">CALL TO!!!......</string>
    <string name="call">Call</string>
    <string name="alarm">ALARM</string>
    <string name="set_up_datetime">Set up Date Time</string>
    <string name="hieu">Đỗ Mạnh Hiếu</string>
    <string name="sharedPreferences_alarm_file">File Preferences</string>
    <string name="avarta_description">Its my avarta</string>
    <string name="alarm_waiting">Alarm is waiting master!</string>
    <string name="alarm_done">Alarm was done master!</string>
    <string name="alarm_stopped">Alarm was stopped master!</string>
    <string name="title">Title: </string>
    <string name="alarmSMS">Content: </string>
</resources>