<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tx_sender_sms"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:text="@string/send_to"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/edt_inputPhone_sms"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:hint="@string/hint_enter_phone_number"
        android:autofillHints="phone"
        android:background="@color/orange"
        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
        android:drawablePadding="15dp"
        android:layout_below="@id/tx_sender_sms"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/tx_sender_sms"
        />
    <TextView
        android:id="@+id/tx_content_sms"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/sms_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@id/edt_inputPhone_sms"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/edt_inputPhone_sms"
        />
    <EditText
        android:id="@+id/edt_content_sms"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:hint="@string/hint_enter_your_sms"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/Moccasin"
        android:drawableStart="@drawable/ic_baseline_textsms_24"
        android:drawablePadding="15dp"
        android:gravity="start"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/tx_content_sms"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/tx_content_sms"
        />
    <EditText
        android:id="@+id/edt_time_sms"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:inputType="datetime"
        android:hint="@string/set_up_datetime"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/sliver"
        android:layout_below="@id/edt_content_sms"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/edt_content_sms"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />
    <Button
        android:id="@+id/btn_setup_sms"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/send_mess"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/orange"
        android:layout_below="@id/edt_time_sms"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/edt_time_sms"
        />
    <Button
        android:id="@+id/btn_cancel_sms"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/cancel_mess"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/orange"
        android:layout_below="@id/btn_setup_sms"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/btn_setup_sms"
        />
</RelativeLayout>