<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tx_content_alarm"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/sms_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="75dp"
        android:layout_marginStart="15dp"
        />
    <EditText
        android:id="@+id/edt_content_alarm"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:hint="@string/hint_enter_your_alarm"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_baseline_alarm_24"
        android:drawablePadding="15dp"
        android:gravity="start"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/tx_content_alarm"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@id/tx_content_alarm"
        />
    <EditText
        android:id="@+id/edt_time_alarm"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:inputType="datetime"
        android:hint="@string/set_up_datetime"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/sliver"
        android:layout_below="@id/edt_content_alarm"
        android:layout_marginTop="25dp"
        android:layout_alignStart="@id/edt_content_alarm"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />
    <Button
        android:id="@+id/btn_setup_alarm"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/alarm"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/orange"
        android:layout_below="@id/edt_time_alarm"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/edt_time_alarm"
        />
    <Button
        android:id="@+id/btn_finish_alarm"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/finish"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/teal_200"
        android:layout_below="@id/btn_setup_alarm"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/btn_setup_alarm"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btn_cancel_alarm"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:text="@string/stop"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/red1"
        android:layout_below="@id/btn_finish_alarm"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@id/btn_finish_alarm"
        android:visibility="invisible"
        />
</RelativeLayout>